# swagger_output.json
@@ -5,7 +5,7 @@
     "description": "",
     "version": "1.0.0"
   },
-  "host": "trcats.fardindev.me/api",
+  "host": "localhost:3000/api",
   "basePath": "/",
   "schemes": [
     "http",
@@ -174,6 +174,19 @@
         }
       }
     },
+    "/leader-board-result": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/create-systemid": {
       "post": {
         "description": "",
@@ -322,6 +335,9 @@
               "properties": {
                 "email": {
                   "example": "any"
+                },
+                "badge": {
+                  "example": "any"
                 }
               }
             }
@@ -330,6 +346,33 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/user/update-badge-all": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -425,6 +468,19 @@
       }
     },
     "/system-users": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users": {
       "get": {
         "description": "",
         "responses": {
